content/docs/0.12.x/reference/cli/commands/keptn_generate.md
---
date: "2022-02-03T11:21:04Z"
title: "keptn generate"
slug: keptn_generate
---
## keptn generate

Generates the markdown CLI documentation or a support archive

### Options inherited from parent commands

```
      --config-file string   Specify custom Keptn Config file path (default: ~/.keptn/config)
  -h, --help                 help
      --mock                 Disables communication to a Keptn endpoint
  -n, --namespace string     Specify the namespace where Keptn should be installed, used and uninstalled in (default "keptn")
  -q, --quiet                Suppresses debug and info messages
  -v, --verbose              Enables verbose logging to print debug messages
  -y, --yes                  Assume yes for all user prompts
```

### SEE ALSO

* [keptn](../keptn/)	 - The CLI for using Keptn
* [keptn generate cloud-events-spec](../keptn_generate_cloud-events-spec/)	 - Generates the markdown documentation for the Keptn CloudEvents
* [keptn generate docs](../keptn_generate_docs/)	 - Generates the markdown documentation for the Keptn CLI
* [keptn generate support-archive](../keptn_generate_support-archive/)	 - Generates a support archive containing all logs

###### Auto generated by spf13/cobra on 3-Feb-2022
